Fixes text overflow issues

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
     border: 3px solid black;
     outline-color: black;
     width: 25%;
-    height: 35rem;
+    height: 25%;
 }
 
 .wanted-divs h3 {
